--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^4.3.1",
     "compression": "^1.7.3",
     "express": "^4.16.4",
+    "mysql2": "^2.0.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-image": "^2.1.1",
@@ -42,7 +43,7 @@
     "eslint-plugin-react": "^7.12.4",
     "file-loader": "^3.0.1",
     "image-webpack-loader": "^4.6.0",
-    "node-sass": "^4.11.0",
+    "node-sass": "^4.13.0",
     "nodemon": "^1.18.11",
     "postcss-loader": "^3.0.0",
     "prettier": "^1.16.4",
