--- a/.babelrc
+++ b/.babelrc
@@ -11,6 +11,7 @@
   ],
   "plugins": [
     ["react-hot-loader/babel"],
-    ["@babel/plugin-proposal-class-properties", { "loose": true }]
+    ["@babel/plugin-proposal-class-properties", { "loose": true }],
+    ["@babel/plugin-transform-runtime"]
   ]
 }
